sorted out a whitespace issue

--- a/homepageStyle.css
+++ b/homepageStyle.css
@@ -2,8 +2,10 @@
     color: #000000
 }
 
-body {
-    background-color: #E2BC8A;
+body,html {
+    border: 0;
+    outline: 0;
+    margin-top: 0;
     margin: 0;
     padding: 0;
 }
@@ -19,6 +21,14 @@ body {
     text-decoration: underline;
     font-family: Lucida Handwriting, cursive;
 }
+
+/*
+#Links{
+    background-color: #E2BC8A;
+    border-style: solid;
+    border-width: 10px;
+}
+*/
 
 #Portfolio { 
     width: 100%;
